@@ -98,7 +98,9 @@
  '(pcomplete-autolist t)
  '(pcomplete-cycle-completions nil)
  '(prolog-system (quote swi))
+ '(recentf-exclude (quote (":")))
  '(recentf-mode t nil (recentf))
+ '(recentf-save-file "~/.emacs-recentf")
  '(reftex-plug-into-AUCTeX t)
  '(save-place-limit 100)
  '(sawfish-extra-keyword-list (quote ("add-frame-style" "call-after-load" "call-after-property-changed" "call-after-state-changed" "custom-set-property" "define" "define-structure" "export" "open")))
